# AITuringBackend

./: .editorconfig  .env.template  .gitignore  3  Procfile  README.md  Remote_Trainer_RecognizeMedications.ipynb  borrar.py  manage.py  population.py  procfile  pyproject.toml  railway.json  requirements.txt  requirements_dev.txt
aituringtesttec/: asgi.py  settings.py  urls.py  views.py  wsgi.py
cliente/: admin.py  apps.py  forms.py  models.py  population.py  urls.py  views.py
cliente/migrations/: 0001_initial.py  0002_remove_cliente_is_admin_cliente_estado.py
clientes/: admin.py  apps.py  models.py  views.py
clientes/migrations/: 0001_initial.py
sql/: insert_categories.sql  insert_cities.sql  insert_countries.sql
static/js/demo/: chart-pie-demo.js
templates/: 404.html  base.html  blank.html  buttons.html  cards.html  charts.html  cliente_Masivo.html  crearCliente.html  exportCliente.html  footer_part.html  forgot-password.html  form.html  head_part.html  index.html  modals_and_scripts_part.html  nav.html  register.html  sidebar_part.html  tables.html  topbar_part.html  utilities-animation.html  utilities-border.html  utilities-color.html  utilities-other.html
templates/cliente/: cliente_confirm_delete.html
templates/post/: feed.html
templates/registration/: login.html
templates/user/: base.html  login.html
utils/: population.py
